<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- 베경 -->
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:translationZ="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- 베경 -->

    <!-- 플랫폼 뷰 -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/platform"
        android:src="@drawable/platform"
        app:layout_constraintBottom_toBottomOf="@id/dojin_character_view"
        app:layout_constraintEnd_toEndOf="@id/dojin_character_view"
        app:layout_constraintStart_toStartOf="@id/dojin_character_view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/platform"
        android:src="@drawable/platform"
        app:layout_constraintBottom_toBottomOf="@id/goeun_character_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/platform"
        android:src="@drawable/platform"
        app:layout_constraintBottom_toBottomOf="@id/jihoon_ock_character_view"
        app:layout_constraintEnd_toEndOf="@id/jihoon_ock_character_view"
        app:layout_constraintStart_toStartOf="@id/jihoon_ock_character_view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/platform"
        android:src="@drawable/platform"
        app:layout_constraintBottom_toBottomOf="@id/haesung_character_view"
        app:layout_constraintEnd_toEndOf="@id/haesung_character_view"
        app:layout_constraintStart_toStartOf="@id/haesung_character_view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/platform"
        android:src="@drawable/platform"
        app:layout_constraintBottom_toBottomOf="@id/hyunsoo_character_view"
        app:layout_constraintEnd_toEndOf="@id/hyunsoo_character_view"
        app:layout_constraintStart_toStartOf="@id/hyunsoo_character_view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/platform"
        android:src="@drawable/platform"
        app:layout_constraintBottom_toBottomOf="@id/jihoon_lee_character_view"
        app:layout_constraintEnd_toEndOf="@id/jihoon_lee_character_view"
        app:layout_constraintStart_toStartOf="@id/jihoon_lee_character_view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/platform"
        android:src="@drawable/platform"
        app:layout_constraintBottom_toBottomOf="@id/yoojin_character_view"
        app:layout_constraintEnd_toEndOf="@id/yoojin_character_view"
        app:layout_constraintStart_toStartOf="@id/yoojin_character_view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/platform"
        android:src="@drawable/platform"
        app:layout_constraintBottom_toBottomOf="@id/changwoo_character_view"
        app:layout_constraintEnd_toEndOf="@id/changwoo_character_view"
        app:layout_constraintStart_toStartOf="@id/changwoo_character_view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/platform"
        android:src="@drawable/platform"
        app:layout_constraintBottom_toBottomOf="@id/juyeon_character_view"
        app:layout_constraintEnd_toEndOf="@id/juyeon_character_view"
        app:layout_constraintStart_toStartOf="@id/juyeon_character_view" />
    <!-- 플랫폼 뷰 -->

    <!-- 캐릭터 뷰 -->
    <com.pl.presentation.custom.CharacterView
        android:id="@+id/jihoon_ock_character_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/jihoon_ock"
        android:translationZ="1dp"
        app:characterName="@string/jihoonOck"
        app:layout_constraintEnd_toStartOf="@id/goeun_character_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jihoonOck"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/jihoon_ock_character_view"
        app:layout_constraintTop_toBottomOf="@id/jihoon_ock_character_view" />

    <TextView
        android:id="@+id/jihoon_ock_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/jihoon_ock_character_view"
        app:layout_constraintTop_toBottomOf="@id/jihoon_ock_character_view" />

    <com.pl.presentation.custom.CharacterView
        android:id="@+id/goeun_character_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/goeun"
        android:translationZ="1dp"
        app:characterName="@string/goeun"
        app:layout_constraintEnd_toEndOf="@id/dojin_character_view"
        app:layout_constraintStart_toStartOf="@id/jihoon_ock_character_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goeun"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/goeun_character_view"
        app:layout_constraintTop_toBottomOf="@id/goeun_character_view" />

    <TextView
        android:id="@+id/goeun_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/goeun_character_view"
        app:layout_constraintTop_toBottomOf="@id/goeun_character_view" />

    <com.pl.presentation.custom.CharacterView
        android:id="@+id/dojin_character_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/dojin"
        android:translationZ="1dp"
        app:characterName="@string/dojin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/goeun_character_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dojin"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/dojin_character_view"
        app:layout_constraintTop_toBottomOf="@id/dojin_character_view" />

    <TextView
        android:id="@+id/dojin_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/dojin_character_view"
        app:layout_constraintTop_toBottomOf="@id/dojin_character_view" />


    <com.pl.presentation.custom.CharacterView
        android:id="@+id/jihoon_lee_character_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/jihoon_lee"
        android:translationZ="1dp"
        app:characterName="@string/jihoonLee"
        app:layout_constraintEnd_toStartOf="@id/hyunsoo_character_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jihoon_ock_state" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jihoonLee"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/jihoon_lee_character_view"
        app:layout_constraintTop_toBottomOf="@id/jihoon_lee_character_view" />

    <TextView
        android:id="@+id/jihoon_lee_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/jihoon_lee_character_view"
        app:layout_constraintTop_toBottomOf="@id/jihoon_lee_character_view" />

    <com.pl.presentation.custom.CharacterView
        android:id="@+id/hyunsoo_character_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/hyunsoo"
        android:translationZ="1dp"
        app:characterName="@string/hyunsoo"
        app:layout_constraintEnd_toEndOf="@id/dojin_character_view"
        app:layout_constraintStart_toStartOf="@id/jihoon_lee_character_view"
        app:layout_constraintTop_toBottomOf="@id/jihoon_ock_state" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hyunsoo"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/hyunsoo_character_view"
        app:layout_constraintTop_toBottomOf="@id/hyunsoo_character_view" />

    <TextView
        android:id="@+id/hyunsoo_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/hyunsoo_character_view"
        app:layout_constraintTop_toBottomOf="@id/hyunsoo_character_view" />

    <com.pl.presentation.custom.CharacterView
        android:id="@+id/haesung_character_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/haesung"
        android:translationZ="1dp"
        app:characterName="@string/haesung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/hyunsoo_character_view"
        app:layout_constraintTop_toBottomOf="@id/jihoon_ock_state" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haesung"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/haesung_character_view"
        app:layout_constraintTop_toBottomOf="@id/haesung_character_view" />

    <TextView
        android:id="@+id/haesung_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/haesung_character_view"
        app:layout_constraintTop_toBottomOf="@id/haesung_character_view" />

    <com.pl.presentation.custom.CharacterView
        android:id="@+id/juyeon_character_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/juyeon"
        android:translationZ="1dp"
        app:characterName="@string/juyeon"
        app:layout_constraintEnd_toStartOf="@id/changwoo_character_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jihoon_lee_state" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/juyeon"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/juyeon_character_view"
        app:layout_constraintTop_toBottomOf="@id/juyeon_character_view" />

    <TextView
        android:id="@+id/juyeon_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/juyeon_character_view"
        app:layout_constraintTop_toBottomOf="@id/juyeon_character_view" />

    <com.pl.presentation.custom.CharacterView
        android:id="@+id/changwoo_character_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/changwoo"
        android:translationZ="1dp"
        app:characterName="@string/changwoo"
        app:layout_constraintEnd_toEndOf="@id/dojin_character_view"
        app:layout_constraintStart_toStartOf="@id/jihoon_lee_character_view"
        app:layout_constraintTop_toBottomOf="@id/jihoon_lee_state" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changwoo"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/changwoo_character_view"
        app:layout_constraintTop_toBottomOf="@id/changwoo_character_view" />

    <TextView
        android:id="@+id/changwoo_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/changwoo_character_view"
        app:layout_constraintTop_toBottomOf="@id/changwoo_character_view" />

    <com.pl.presentation.custom.CharacterView
        android:id="@+id/yoojin_character_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/yoojin"
        android:translationZ="1dp"
        app:characterName="@string/yoojin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/changwoo_character_view"
        app:layout_constraintTop_toBottomOf="@id/jihoon_lee_state" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yoojin"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/yoojin_character_view"
        app:layout_constraintTop_toBottomOf="@id/yoojin_character_view" />

    <TextView
        android:id="@+id/yoojin_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/yoojin_character_view"
        app:layout_constraintTop_toBottomOf="@id/yoojin_character_view" />
    <!-- 캐릭터 뷰 -->

    <!-- 상태 뷰-->
    <LinearLayout
        android:id="@+id/status_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/status_in"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/status_out"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/status_class"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/status_home"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
    <!-- 상태 뷰-->

</androidx.constraintlayout.widget.ConstraintLayout>